plugins {
    id 'com.android.application'
    id 'androidsvgdrawable'
    id 'com.google.protobuf' version '0.8.10' /// clone bitcoinj
}

configurations {
   // all*.exclude group: 'com.google.guava', module: 'listenablefuture' ///clone bitcoinj
    all*.exclude group: 'androidx.viewpager', module: 'viewpager'
    all*.exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
    all*.exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
  ///  all*.exclude group: 'org.slf4j', module: 'slf4j-api' // clone slf4j-api


    }
//clone bitcoinj
configurations.all {
    exclude group: 'androidx.annotation'
}   

//end
dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar']) // vendor libs
    implementation 'com.google.protobuf:protobuf-javalite:3.21.12' // for javalite
 //implementation 'net.jcip:jcip-annotations:1.0' ///clone bitcoinj
   // implementation 'com.google.protobuf:protobuf-java:3.21.12' /// for java
   // implementation 'org.bouncycastle:bcprov-jdk18on:1.77'   /// clone bitcoinj
  //  implementation 'androidx.annotation:annotation:1.10.0'
    implementation 'androidx.core:core:1.18.0'
    implementation 'androidx.activity:activity:1.13.0'
    implementation 'androidx.fragment:fragment:1.8.9'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
  //implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.3.0'
    implementation 'androidx.viewpager2:viewpager2:1.1.0'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.10.0'
    implementation 'androidx.lifecycle:lifecycle-service:2.10.0'
    implementation 'androidx.sqlite:sqlite:2.4.0'
    implementation "androidx.room:room-runtime:2.6.1"
    annotationProcessor "androidx.room:room-compiler:2.6.1"
  //  implementation 'org.bitcoinj:bitcoinj-core:0.17.1'
    ///implementation 'com.google.guava:guava:33.4.0-android'
   // implementation 'com.google.zxing:core:3.5.4'
    //noinspection GradleDependency
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    //noinspection GradleDependency
    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
    implementation 'com.squareup.moshi:moshi:1.11.0'
   // implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'com.github.tony19:logback-android:3.0.0' 
    testImplementation 'junit:junit:4.13.2'

}

// ---- PROTOBUF CONFIG - clone bitcoinj----
protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:3.21.12'
    }
  /* generateProtoTasks { //for java
        all().each { task ->
            task.builtins {
                java {}
            }
        }
    }
} */
    generateProtoTasks { //for javalite
        all().each { task ->
    task.builtins {
  java { option 'lite' }
           }
        }
    }
}

//end

android {
    compileSdkVersion 'android-34'
    buildToolsVersion '36.1.0'

    defaultConfig {
        applicationId 'corp.wallet.bitcoin'
    }

    buildTypes {
        all {
            minifyEnabled true
            shrinkResources true
            crunchPngs false
            proguardFile 'proguard.cfg'
        }
        debug {
            debuggable true
        }
    }

    flavorDimensions 'network'
    productFlavors {
        Testnet {
            dimension 'network'
            applicationId 'de.schildbach.wallet_test'
        }
        Signet {
            dimension 'network'
            applicationIdSuffix '.signet'
        }
        Mainnet {
            dimension 'network'
            applicationId 'de.schildbach.wallet'
        }
    }

    sourceSets {
        main {
            
            manifest.srcFile 'AndroidManifest.xml'
           // java.srcDirs = ['src']  
            java.srcDirs = ['src', 'src/wallet/java']  // clone bitcoinj
            res.srcDirs = ['res']
            assets.srcDirs = ['assets']
            proto.srcDirs += ['src/wallet/proto']  // <-- clone bitcoinj
            resources.srcDirs = ['src/wallet/resources'] //clone bitcoinj
        
        }
        Signet {
            res.srcDirs = ['res-signet']
            assets.srcDirs = ['assets-signet']
        }
        Mainnet {
            res.srcDirs = ['res-mainnet']
            assets.srcDirs = ['assets-mainnet']
        }
        test {
            java.srcDirs = ['test']
            resources.srcDirs = ['test']
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    lintOptions {
        abortOnError false
        disable 'MissingTranslation'
    }

    packagingOptions {
        exclude 'META-INF/androidx/**/LICENSE.txt'
        exclude 'META-INF/*.version'
        exclude 'META-INF/proguard/**'
        exclude 'META-INF/services/**'
        exclude 'META-INF/*.kotlin_module'
        exclude 'META-INF/kotlin-project-structure-metadata.json'
        exclude 'META-INF/**/coroutines.pro'
        exclude 'DebugProbesKt.bin'
        exclude '**/*.proto'
        exclude 'core/**'
        exclude 'kotlin/**'
        exclude 'kotlinx/**'
        exclude 'commonMain/**'
        exclude 'nativeMain/default/**'
        exclude 'nativeOtherMain/default/**'
        exclude 'nonJvmMain/default/**'
        exclude 'concurrentMain/default/**'
        exclude 'linuxMain/default/**'
        exclude 'org/bouncycastle/**/*.properties'
        exclude 'okhttp3/internal/publicsuffix/*'
        exclude 'org/bitcoinj/crypto/mnemonic/wordlist/english.txt'
        exclude 'org/bitcoinj/crypto/cacerts'
        exclude 'org.bitcoin.*.checkpoints.txt'
    }

    applicationVariants.all { variant ->
        variant.outputs.all {
            outputFileName = "../../bitcoin-wallet-${variant.flavorName.toLowerCase()}-${variant.buildType.name}.apk"
        }
    }
}

task svgToPngMipmap(type: fr.avianey.androidsvgdrawable.gradle.SvgDrawableTask) {
    from = files('graphics/mipmap')
    to = file('res')
    targetedDensities = ['xxhdpi', 'xxxhdpi']
    outputFormat = 'PNG'
    outputType = 'mipmap'
}
